# Sovereign

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  sovereign.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
sovereign/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py  output.py
sovereign/data/: __init__.py
sovereign/modules/: __init__.py  aclabuse.py  asreproast.py  base.py  dcsync.py  enum.py  kerberoast.py  lateral.py
sovereign/utils/: __init__.py  ldap_helpers.py
tests/: test_boundary_helpers.py  test_boundary_models.py  test_boundary_modules.py  test_boundary_output.py  test_cli.py  test_data.py  test_helpers.py  test_models.py
