[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-framework"
version = "2.0.0"
description = "Windows and Active Directory offensive suite for authorized red team engagements"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "arkanzasfeziii"}]
keywords = ["security", "active-directory", "kerberos", "red-team", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/arkanzasfeziii/Sovereign"
Repository = "https://github.com/arkanzasfeziii/Sovereign"

[project.scripts]
sovereign = "sovereign.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
